# Garant-MCP

./: .env.example  .gitignore  AGENT_README.md  README.md  TEST_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agents/: garant-lawyer.md
docs/: AGENT_PROMPT.md  WORKFLOW_EXAMPLE.md  agent-config.json
docs/use_cases/: README.md  Договорная_работа.md  Жилищные_споры.md  Защита_прав_потребителей.md  Земля_и_недвижимость.md  Наследство.md  Семейные_споры.md  Трудовые_споры.md
examples/: workflow_example.py
results/templates/: templates_index.json  Договор.docx  Жалоба.docx  Исковое_заявление.docx  Ответ_на_претензию.docx  Правовое_заключение.docx  Претензия.docx  Соглашение.docx
scripts/: generate_templates.py  install.ps1  manual_api_check.py  run.ps1  test.ps1
src/garant_mcp/: __init__.py  cache.py  client.py  config.py  file_tools.py  prompts.py  resources.py  server.py  template_manager.py  tools.py
tests/: conftest.py  test_all_features.py  test_client.py  test_file_tools.py  test_tools.py
кейсы/Возврат_автомобиля_дилеру_2026-06-01/исходные данные/: Описание_запроса.txt
кейсы/Возврат_автомобиля_дилеру_2026-06-01/результат/: Инструкция_по_возврату_автомобиля.docx  Претензия_на_возврат_автомобиля.docx
кейсы/Возврат_автомобиля_дилеру_2026-06-01/служебное для агента/: Поиск_законодательства_результаты.txt  Поиск_судебной_практики_результаты.txt
